<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_60"
        android:layout_marginTop="@dimen/dp_40"
        android:layout_marginRight="@dimen/dp_60">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setting_040701"
            android:textColor="@color/txt_white"
            android:textSize="@dimen/sp_15" />

    </FrameLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_0_5"
        android:layout_marginLeft="@dimen/dp_60"
        android:layout_marginTop="@dimen/dp_3"
        android:layout_marginRight="@dimen/dp_60"
        android:background="@color/white" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_16"
            android:orientation="horizontal">

            <TextView
                android:layout_width="@dimen/dp_100"
                android:layout_height="wrap_content"
                android:text="@string/setting_memory_total"
                android:textColor="@color/txt_white"
                android:textSize="@dimen/sp_15" />

            <TextView
                android:id="@+id/tv_total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/txt_white"
                android:textSize="@dimen/sp_15" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_16"
            android:orientation="horizontal">

            <TextView
                android:layout_width="@dimen/dp_100"
                android:layout_height="wrap_content"
                android:text="@string/setting_memory_used"
                android:textColor="@color/txt_white"
                android:textSize="@dimen/sp_15" />

            <TextView
                android:id="@+id/tv_used"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/txt_white"
                android:textSize="@dimen/sp_15" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_16"
            android:orientation="horizontal">

            <TextView
                android:layout_width="@dimen/dp_100"
                android:layout_height="wrap_content"
                android:text="@string/setting_memory_surplus"
                android:textColor="@color/txt_white"
                android:textSize="@dimen/sp_15" />

            <TextView
                android:id="@+id/tv_surplus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/txt_white"
                android:textSize="@dimen/sp_15" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>