<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <LinearLayout
        android:layout_width="@dimen/dp_320"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="@dimen/dp_32"
        android:layout_marginTop="@dimen/dp_40">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/setting_03"
            android:textColor="@color/txt_white"
            android:textSize="@dimen/sp_15"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/dp_4"
            android:layout_marginRight="@dimen/dp_4"
            android:src="@drawable/arrow_right"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/setting_0305"
            android:textColor="@color/txt_white"
            android:textSize="@dimen/sp_15"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/dp_4"
            android:layout_marginRight="@dimen/dp_4"
            android:src="@drawable/arrow_right"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/setting_030501"
            android:textColor="@color/txt_white"
            android:textSize="@dimen/sp_15"/>
    </LinearLayout>

    <View
        android:layout_width="@dimen/dp_256"
        android:layout_height="@dimen/dp_0_5"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/dp_3"
        android:background="@color/white"/>

    <LinearLayout
        android:id="@id/setting_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="@dimen/dp_256"
            android:layout_height="@dimen/dp_201"
            android:layout_gravity="center_horizontal">

            <TextView
                android:id="@+id/tv_room_no_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_64"
                android:text="@string/setting_room_no"
                android:textColor="@color/txt_white"
                android:textSize="@dimen/sp_15"/>

            <com.mili.smarthome.tkj.widget.NumInputView
                android:id="@+id/tv_room_no"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/dp_64"
                app:maxLength="4"
                app:text="0000"
                app:textColor="@color/txt_white"
                app:textSize="@dimen/sp_15"/>

            <TextView
                android:id="@+id/tv_hint1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/dp_112"
                android:textColor="@color/txt_white"
                android:textSize="@dimen/sp_15"/>

            <TextView
                android:id="@+id/tv_hint2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/dp_144"
                android:textColor="@color/txt_white"
                android:textSize="@dimen/sp_15"/>
        </FrameLayout>

        <com.mili.smarthome.tkj.setting.view.KeyHintView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/dp_12"
            app:deletable="true"/>
    </LinearLayout>

    <com.mili.smarthome.tkj.setting.view.ResultView
        android:id="@id/setting_result"
        android:layout_width="@dimen/dp_256"
        android:layout_height="@dimen/dp_201"
        android:layout_gravity="center_horizontal"
        android:visibility="gone"/>
</LinearLayout>