<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto"
             android:layout_width="match_parent"
             android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="@dimen/dp_320"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="@dimen/dp_32"
            android:layout_marginTop="@dimen/dp_40">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/setting_03"
                android:textColor="@color/txt_white"
                android:textSize="@dimen/sp_15"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/dp_4"
                android:layout_marginRight="@dimen/dp_4"
                android:src="@drawable/arrow_right"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/setting_0304"
                android:textColor="@color/txt_white"
                android:textSize="@dimen/sp_15"/>

            <LinearLayout
                android:id="@+id/ll_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/dp_4"
                    android:layout_marginRight="@dimen/dp_4"
                    android:src="@drawable/arrow_right"/>

                <TextView
                    android:id="@+id/tv_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/setting_030401"
                    android:textColor="@color/txt_white"
                    android:textSize="@dimen/sp_15"/>
            </LinearLayout>
        </LinearLayout>

        <View
            android:layout_width="@dimen/dp_256"
            android:layout_height="@dimen/dp_0_5"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/dp_3"
            android:background="@color/white"/>

        <FrameLayout
            android:id="@id/setting_content"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recyclerview"
                android:layout_width="@dimen/dp_256"
                android:layout_height="@dimen/dp_201"
                android:layout_gravity="center_horizontal"/>

            <LinearLayout
                android:id="@+id/ll_bluetooth"
                android:layout_width="@dimen/dp_256"
                android:layout_height="@dimen/dp_201"
                android:layout_gravity="center_horizontal"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:visibility="gone">

                <TextView
                    android:layout_width="@dimen/dp_120"
                    android:layout_height="wrap_content"
                    android:text="@string/setting_bluetooth_devid"
                    android:textColor="@color/txt_white"
                    android:textSize="@dimen/sp_15"/>

                <com.mili.smarthome.tkj.widget.NumInputView
                    android:id="@+id/tv_devid"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:maxLength="8"
                    app:textColor="@color/txt_white"
                    app:textSize="@dimen/sp_15"/>

            </LinearLayout>

            <com.mili.smarthome.tkj.setting.view.KeyHintView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/dp_213"/>
        </FrameLayout>

        <com.mili.smarthome.tkj.setting.view.ResultView
            android:id="@id/setting_result"
            android:layout_width="@dimen/dp_256"
            android:layout_height="@dimen/dp_201"
            android:layout_gravity="center_horizontal"
            android:visibility="gone"/>
    </LinearLayout>
</FrameLayout>